falta adicionar animaçao troca de pagina

--- a/experiencia.html
+++ b/experiencia.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <script defer src="node_modules/swup/dist/swup.min.js"></script>
-  <script defer src ="script.js"></script>
+  <script defer src="script.js"></script>
   <title>CurriculoAnselmo</title>
 
   <script src='https://kit.fontawesome.com/a076d05399.js'></script>
@@ -41,8 +41,8 @@
       <div class="inner">
         <h3 class="masthead-brand">Currículo</h3>
         <nav class="nav nav-masthead justify-content-center">
-          <a class="nav-link active" href="index.html">Home</a>
-          <a class="nav-link" href="experiencia.html">EXPERIÊNCIA<br>PROFISSIONAL</a>
+          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link active" href="experiencia.html">EXPERIÊNCIA<br>PROFISSIONAL</a>
           <a class="nav-link" href="educacao.html">EDUCAÇÃO<br>FORMAÇÃO</a>
           <a class="nav-link" href="competencia.html">COMPETÊNCIAS<br>PESSOAIS</a>
         </nav>
@@ -50,42 +50,31 @@
     </header>
 
     <main id="swup" role="main">
-      <div style="display : flex ; justify-content: flex-start;">
-        <!-- Foto perfil -->
-        <img width="400px" src="AnselmoGonçalves.jpg">
-        <div style="text-align: left; margin-left: 10px; font-size: larger;">
-          <p><i class="fas fa-user"></i><b> Nome:</b> Anselmo Amorim Gonçalves</p>
-          <p><i class="fas fa-house-user"></i><b> Morada:</b> Ponte de Lima</p>
-          <p><i class='fas fa-venus-mars'></i><b> Género:</b> Masculino</p>
-          <p><i class='fas fa-calendar-alt'></i><b> Data Nascimento:</b> 11/06/1993</p>
-          <p><i class='fas fa-globe-europe'></i><b> Nacionalidade:</b> Portuguesa</p>
-          <nav style="width: 400px;">
-            <!--Link Linkedin-->
-            <p><i class='fab fa-linkedin'></i><b> LinkedIn:</b><a style="cursor : pointer" class="inner" onclick="buttonlinkedin()">
-              anselmogoncalves</a></p>
-              <p><i class="fab fa-github"></i><b> GitHub:</b><a style="cursor : pointer" class="inner" onclick="buttongithub()">
-                selmo93</a></p>
-          </nav>
-        </div>
-      </div>
+      <section>
+        <h1><u>EXPERIÊNCIA PROFISSIONAL</u></h1>
+        <p><i class="far fa-calendar-alt"></i> 03/02/2020 – 30/04/2020</p>
+        <p style="padding-left: 10%;">Full Stack Developer</p>
+        <p style="padding-left: 10%;">Ponto 25 – Ponto 25 Informática, lda, Braga (Portugal)</p>
+        </section>
     </main>
 
     <footer class="mastfoot mt-auto">
       <div class="inner">
-        <p>Página em construção.<br>Esta página foi escrita utilizando HTML, CSS, JavaScript, Bootstrap, GIT. Para mais informações
+        <p>Página em construção.<br>Esta página foi escrita utilizando HTML, CSS, JavaScript, Bootstrap, GIT. Para mais
+          informações
           contacto via <a href="https://www.linkedin.com/in/anselmogoncalves/">
-              Linkedin</a>.</p>
+            Linkedin</a>.</p>
       </div>
     </footer>
   </div>
 </body>
 <script>
   function buttonlinkedin() {
-        window.open("https://www.linkedin.com/in/anselmogoncalves/");
-    }
-    function buttongithub(){
-      window.open("https://github.com/selmo93");
-    }
+    window.open("https://www.linkedin.com/in/anselmogoncalves/");
+  }
+  function buttongithub() {
+    window.open("https://github.com/selmo93");
+  }
 </script>
 
 </html>
