--- a/competencia.html
+++ b/competencia.html
@@ -71,33 +71,33 @@
         <section>
             <h3><b>Qualificações chave: </b></h3>
             <ul>
-                <li>Conhecimentos de programação, desenvolvimento Web, robótica, redes.</li>
+                <li style="text-align: left;">Conhecimentos de programação, desenvolvimento Web, robótica, redes.</li>
             </ul>
         </section>
         <section>
             <h3><b>Competências de organização: </b></h3>
             <ul>
-                <li>Sentido de organização.</li>
-                <li>Aptidão e gosto por uma aprendizagem contínua.</li>
+                <li style="text-align: left;">Sentido de organização.</li>
+                <li style="text-align: left;">Aptidão e gosto por uma aprendizagem contínua.</li>
         </section>
         <section>
             <h3><b>Competência digital: </b></h3>
             <ul>
-                <li>Experiência em VB.NET, HTML, CSS, ASP.NET, AJAX, JavaScript, Telerik, SQL, SQL Server
+                <li style="text-align: left;">Experiência em VB.NET, HTML, CSS, ASP.NET, AJAX, JavaScript, Telerik, SQL, SQL Server
                     desenvolvidos em ambiente laboral na Ponto 25.</li>
-                <li>Conhecimentos em C#, VB.NET, C++, C, PHP, Java, HTML, CSS, JavaScript, PL\SQL, SQL, SQL
+                <li style="text-align: left;">Conhecimentos em C#, VB.NET, C++, C, PHP, Java, HTML, CSS, JavaScript, PL\SQL, SQL, SQL
                     Plus, ASP.NET, ASP.NET MVC, AJAX, Bootstrap, GIT.</li>
-                <li>Rede de computadores.</li>
+                <li style="text-align: left;">Rede de computadores.</li>
         </section>
         <section>
             <h3><b>Competências de comunicação: </b></h3>
             <ul>
-                <li>Boa capacidade de comunicação, capacidade de adaptação a ambientes multiculturais.</li>
+                <li style="text-align: left;">Boa capacidade de comunicação, capacidade de adaptação a ambientes multiculturais.</li>
         </section>
         <section>
             <h3><b>Informação adicional: </b></h3>
             <ul>
-                <li>Carta de condução: B.</li>
+                <li style="text-align: left;">Carta de condução: B.</li>
         </section>
     </main>
 
