external link icon

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
           <nav style="width: 400px;">
             <!--Link Linkedin-->
             <p><i class='fab fa-linkedin'></i><b> LinkedIn:</b><a style="cursor : pointer" class="inner" onclick="buttonlinkedin()">
-              anselmogoncalves</a></p>
+              anselmogoncalves <i class="fas fa-external-link-alt"></i></a></p>
               <p><i class="fab fa-github"></i><b> GitHub:</b><a style="cursor : pointer" class="inner" onclick="buttongithub()">
-                selmo93</a></p>
+                selmo93 <i class="fas fa-external-link-alt"></i></a></p>
           </nav>
         </div>
       </div>
@@ -74,7 +74,7 @@
       <div class="inner">
         <p>Página em construção.<br>Esta página foi escrita utilizando HTML, CSS, JavaScript, Bootstrap, GIT. Para mais informações
           contacto via <a href="https://www.linkedin.com/in/anselmogoncalves/">
-              Linkedin</a>.</p>
+              Linkedin <i class="fas fa-external-link-alt"></i></a>.</p>
       </div>
     </footer>
   </div>
