external link icon

--- a/competencia.html
+++ b/competencia.html
@@ -86,7 +86,7 @@
                 <li style="text-align: left;">Experiência em VB.NET, HTML, CSS, ASP.NET, AJAX, JavaScript, Telerik, SQL, SQL Server
                     desenvolvidos em ambiente laboral na Ponto 25.</li>
                 <li style="text-align: left;">Conhecimentos em C#, VB.NET, C++, C, PHP, Java, HTML, CSS, JavaScript, PL\SQL, SQL, SQL
-                    Plus, ASP.NET, ASP.NET MVC, AJAX, Bootstrap, GIT.</li>
+                    Plus, ASP.NET, ASP.NET MVC, AJAX, Bootstrap, GIT, jQuery, Vue.js, Laravel.</li>
                 <li style="text-align: left;">Rede de computadores.</li>
         </section>
         <section>
