optimizaçao do codigo(falta nao repetir e adicionar transiçoes melhorar visual da pagina)

--- a/competencia.html
+++ b/competencia.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <script defer src="node_modules/swup/dist/swup.min.js"></script>
   <script defer src ="script.js"></script>
   <title>CurriculoAnselmo</title>
 
@@ -49,7 +48,7 @@
       </div>
     </header>
 
-    <main id="swup" role="main">
+    <main role="main">
         <section>
             <h1><u>COMPETÊNCIAS PESSOAIS</u></h1>
             <table>
