--- a/experiencia.html
+++ b/experiencia.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <script defer src="node_modules/swup/dist/swup.min.js"></script>
   <script defer src="script.js"></script>
   <title>CurriculoAnselmo</title>
 
@@ -49,7 +48,7 @@
       </div>
     </header>
 
-    <main id="swup" role="main">
+    <main role="main">
       <section>
         <h1><u>EXPERIÊNCIA PROFISSIONAL</u></h1>
         <p><i class="far fa-calendar-alt"></i> 03/02/2020 – 30/04/2020</p>
